--- a/x-pack/package.json
+++ b/x-pack/package.json
@@ -84,6 +84,7 @@
     "@elastic/node-phantom-simple": "2.2.4",
     "@elastic/numeral": "2.3.2",
     "@kbn/datemath": "link:../packages/kbn-datemath",
+    "@kbn/i18n": "link:../packages/kbn-i18n",
     "@kbn/ui-framework": "link:../packages/kbn-ui-framework",
     "@samverschueren/stream-to-observable": "^0.3.0",
     "@slack/client": "^4.2.2",
